fix: filter default stuff at website creation
